# claim-integrity-engine

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
examples/: sample_audit.py
src/claim_engine/: __init__.py  auditor_app.py  dashboard.py  engine.py
src/claim_engine/core/: __init__.py  models.py  rule_engine.py  xactimate_parser.py
src/claim_engine/modules/: __init__.py  financial.py  flooring.py  general_repair.py  water_remediation.py
src/claim_engine/reporting/: __init__.py  scorecard.py
src/claim_engine/utils/: __init__.py  pii_redaction.py
tests/: __init__.py  test_engine.py  test_models.py  test_pii_redaction.py
